package com.xter.design.proxy.origin;

public interface IBusiness {
	void doSomeThing();
}
